--- a/VsTestV2WithDefaultValuesTest.yml
+++ b/VsTestV2WithDefaultValuesTest.yml
@@ -15,7 +15,7 @@ trigger:
 jobs:
 - job: RunTest1
   displayName: 'Run Tests'
-  pool: Default
+  pool: hpool
   steps:              
   - task: VisualStudioTestPlatformInstaller@1
     displayName: 'Visual Studio Test Platform Installer'
